[gd_scene load_steps=5 format=2]

[ext_resource path="res://DragNDrop.gd" type="Script" id=1]
[ext_resource path="res://Assets/Plants/seeds/SampleSeed.png" type="Texture" id=2]
[ext_resource path="res://SeedChange.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 36.0809, 61.675 )

[node name="aSeeds" type="Area2D" groups=[
"draggable",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SeedImage" type="Sprite" parent="."]
position = Vector2( 2.37847, 0.594696 )
texture = ExtResource( 2 )
script = ExtResource( 3 )
[connection signal="area_shape_entered" from="." to="." method="_on_aSeeds_area_shape_entered"]
[connection signal="area_shape_exited" from="." to="." method="_on_aSeeds_area_shape_exited"]
[connection signal="input_event" from="." to="." method="_on_draggable_input_event"]
